--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       # Ensure SSH is running for internal communication (if needed for advanced setups)
       # SSH_PORT: 22
     networks:
-      - hadoop-net
+      - hadoop_net
     command: ["hdfs", "namenode"]
     user: root
     healthcheck:
@@ -34,7 +34,7 @@ services:
       HDFS_DATANODE_USER: root
       HADOOP_HEAPSIZE: 1024 # Adjust as needed
     networks:
-      - hadoop-net
+      - hadoop_net
     command: ["hdfs", "datanode"]
     depends_on:
       namenode:
@@ -55,7 +55,7 @@ services:
       YARN_RESOURCEMANAGER_USER: root
       HADOOP_HEAPSIZE: 1024 # Adjust as needed
     networks:
-      - hadoop-net
+      - hadoop_net
     command: ["yarn", "resourcemanager"]
     depends_on:
       namenode:
@@ -74,7 +74,7 @@ services:
       YARN_NODEMANAGER_USER: root
       HADOOP_HEAPSIZE: 1024 # Adjust as needed
     networks:
-      - hadoop-net
+      - hadoop_net
     command: ["yarn", "nodemanager"]
     depends_on:
       resourcemanager:
@@ -90,7 +90,7 @@ services:
       MAPRED_HISTORYSERVER_USER: root
       HADOOP_HEAPSIZE: 1024 # Adjust as needed
     networks:
-      - hadoop-net
+      - hadoop_net
     command: ["mapred", "historyserver"]
     depends_on:
       namenode:
@@ -101,5 +101,5 @@ volumes:
   datanode_data:
 
 networks:
-  hadoop-net:
+  hadoop_net:
     driver: bridge
