--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,15 @@ services:
     command: ["hdfs", "datanode"]
     env_file:
       - ./config
-  
+    depends_on:
+      namenode:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "hdfs", "dfsadmin", "-report"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   resourcemanager:
     image: apache/hadoop:3
     hostname: resourcemanager
