--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,10 +44,21 @@ services:
       - ./config
     volumes:
       - ./test.sh:/opt/test.sh
-  
+    depends_on:
+      namenode:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "jps | grep ResourceManager"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   nodemanager:
     image: apache/hadoop:3
     hostname: nodemanager
     command: ["yarn", "nodemanager"]
     env_file:
       - ./config
+    depends_on:
+      resourcemanager:
+        condition: service_healthy
