--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,12 +79,15 @@ jobs:
           echo "YARN ResourceManager status verified."
 
       - name: Check NameNode UI accessibility
-        # Use curl -s -I to get only headers, then parse the HTTP status code.
+        # Use curl to check if the NameNode UI is responding.
+        # -f: Fail silently (no output on HTTP errors).
         # -s: Silent mode (don't show progress meter or error messages).
-        # -I: Perform a HEAD request to get only headers.
+        # -S: Show error (when -s is used).
+        # -o /dev/null: Discard output.
+        # -w "%{http_code}": Output HTTP status code.
         run: |
           echo "Checking NameNode UI at http://localhost:9870..."
-          until [ "$(curl -s -I http://localhost:9870 | head -n 1 | awk '{print $2}')" == "200" ]; do
+          until [ "$(curl -s -o /dev/null -w "%{http_code}" http://localhost:9870)" == "302" ]; do
             echo -n "."; sleep 5;
           done
           echo "NameNode UI is accessible."
