--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,3 +110,91 @@ services:
     #     condition: service_healthy
     #   historyserver:
     #     condition: service_healthy
+
+  # Hive Metastore Database (PostgreSQL)
+  hive-metastore-db:
+    image: postgres:13
+    hostname: hive-metastore-db
+    environment:
+      POSTGRES_DB: metastore
+      POSTGRES_USER: hive
+      POSTGRES_PASSWORD: hive123
+    volumes:
+      - hive-metastore-db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U hive -d metastore"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # Hive Metastore Service
+  hive-metastore:
+    image: apache/hive:4.0.0
+    hostname: hive-metastore
+    environment:
+      SERVICE_NAME: metastore
+      DB_DRIVER: postgres
+      SERVICE_OPTS: "-Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-db:5432/metastore -Djavax.jdo.option.ConnectionUserName=hive -Djavax.jdo.option.ConnectionPassword=hive123"
+    env_file:
+      - ./config
+    ports:
+      - 9083:9083
+    # depends_on:
+    #   namenode:
+    #     condition: service_healthy
+    #   hive-metastore-db:
+    #     condition: service_healthy
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "9083"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # HiveServer2
+  hiveserver2:
+    image: apache/hive:4.0.0
+    hostname: hiveserver2
+    environment:
+      SERVICE_NAME: hiveserver2
+      SERVICE_OPTS: "-Dhive.metastore.uris=thrift://hive-metastore:9083"
+      IS_RESUME: "true"
+    env_file:
+      - ./config
+    ports:
+      - 10000:10000  # HiveServer2 Thrift port
+      - 10002:10002  # HiveServer2 Web UI
+    volumes:
+      - ./test.sh:/opt/test.sh
+    # depends_on:
+    #   namenode:
+    #     condition: service_healthy
+    #   hive-metastore:
+    #     condition: service_healthy
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "10000"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # Hive Client for running queries
+  hive-client:
+    image: apache/hive:4.0.0
+    hostname: hive-client
+    command: ["tail", "-f", "/dev/null"]  # Keep container running
+    environment:
+      SERVICE_OPTS: "-Dhive.metastore.uris=thrift://hive-metastore:9083"
+    env_file:
+      - ./config
+    volumes:
+      - ./test.sh:/opt/test.sh
+      - ./hive-queries:/opt/hive-queries  # Mount directory for query files
+    # depends_on:
+    #   namenode:
+    #     condition: service_healthy
+    #   hive-metastore:
+    #     condition: service_healthy
+    #   hiveserver2:
+    #     condition: service_healthy
+
+volumes:
+  hive-metastore-db-data:
