--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,18 +111,20 @@ services:
     #   historyserver:
     #     condition: service_healthy
 
-  # Hive Metastore Database (PostgreSQL)
+  # Hive Metastore Database (MySQL)
   hive-metastore-db:
-    image: postgres:13
+    image: mysql:8.0
     hostname: hive-metastore-db
     environment:
-      POSTGRES_DB: metastore
-      POSTGRES_USER: hive
-      POSTGRES_PASSWORD: hive123
+      MYSQL_ROOT_PASSWORD: root123
+      MYSQL_DATABASE: metastore
+      MYSQL_USER: hive
+      MYSQL_PASSWORD: hive123
     volumes:
-      - hive-metastore-db-data:/var/lib/postgresql/data
+      - hive-metastore-db-data:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U hive -d metastore"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "hive", "-phive123"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -133,12 +135,14 @@ services:
     hostname: hive-metastore
     environment:
       SERVICE_NAME: metastore
-      DB_DRIVER: postgres
-      SERVICE_OPTS: "-Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-db:5432/metastore -Djavax.jdo.option.ConnectionUserName=hive -Djavax.jdo.option.ConnectionPassword=hive123"
+      DB_DRIVER: mysql
+      SERVICE_OPTS: "-Djavax.jdo.option.ConnectionDriverName=com.mysql.cj.jdbc.Driver -Djavax.jdo.option.ConnectionURL=jdbc:mysql://hive-metastore-db:3306/metastore?useSSL=false -Djavax.jdo.option.ConnectionUserName=hive -Djavax.jdo.option.ConnectionPassword=hive123"
     env_file:
       - ./config
     ports:
       - 9083:9083
+    volumes:
+      - ./init-hive.sh:/docker-entrypoint-initdb.d/init-hive.sh
     # depends_on:
     #   namenode:
     #     condition: service_healthy
